k8s/overlays/prod/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 1Gi
