k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pd-care
spec:
  tls:
    - hosts:
        - pd.lu.im.ntu.edu.tw
      secretName: pd-lu-im-ntu-edu-tw-tls
  rules:
    - host: pd.lu.im.ntu.edu.tw
